# Crashlab_project_Rudolph

arduino_src/: arduino_door_convey_led.ino  arduino_door_convey_led_except_first_Serial0.ino  arduino_door_conveyor.ino  arduino_send.ino  get_arduino_msg.py  test1.ino  test_arduino.py  test_arduino_1.py
rudolph/: CMakeLists.txt
rudolph/rudolph/: package.xml
rudolph/rudolph_bringup/: CMakeLists.txt  package.xml
rudolph/rudolph_description/: package.xml
rudolph/rudolph_motor/: CMakeLists.txt  package.xml
rudolph/rudolph_navigation/: package.xml
rudolph/rudolph_odom/: CMakeLists.txt
rudolph/rudolph_teleop/: CMakeLists.txt
rudolph_arduino/: CMakeLists.txt  package.xml  setup.py
rudolph_arduino/launch/: rudolph_arduino_key.launch
rudolph_arduino/nodes/: arduino_test_1.py  ros_arduino.py  ros_arduino_test.py  ros_arduino_thread.py
rudolph_bringup/: package.xml
rudolph_bringup/launch/: bringup.launch  rudolph_imu.launch  rudolph_lidar.launch  rudolph_remote.launch  rudolph_robot.launch
rudolph_description/: CMakeLists.txt
rudolph_description/config/: joint_names_capstone_5_urdf.yaml
rudolph_description/launch/: gazebo.launch  (+1 more)
rudolph_motor/: CMakeLists.txt  package.xml
rudolph_msgs/: CMakeLists.txt  package.xml
rudolph_navigation/: CMakeLists.txt  package.xml
rudolph_odom/: package.xml
rudolph_params/: CMakeLists.txt  package.xml
rudolph_slam/: CMakeLists.txt  package.xml
rudolph_sound/: CMakeLists.txt  package.xml  setup.py
rudolph_teleop/: CMakeLists.txt  package.xml  setup.py
rudolph_web/: CMakeLists.txt  setup.py
(+69 files in other folders)
