<?xml version="1.0"?>
<package format="2">
  <name>rudolph</name>
  <version>0.0.0</version>
  <description>
    The rudolph meta package
  </description>
  <maintainer email="kwon@todo.todo">kwon</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rudolph_description</exec_depend>
  <exec_depend>rudolph_bringup</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
